--- a/m/user/register.html
+++ b/m/user/register.html
@@ -20,28 +20,33 @@
         <span class="title">注册</span>
     </header>
     <div class="cz_container">
-        <div class="form_box">
-            <div class="mui-input-row">
-                <input name="mobile" type="text" placeholder="手机号">
+       <form action="">
+            <div class="form_box">
+                <div class="mui-input-row">
+                    <input name="username" type="text" placeholder="用户名">
+                </div>
+                <div class="mui-input-row">
+                    <input class = "mobile" name="mobile" type="text" placeholder="手机号">
+                </div>
+                <div class="mui-input-row">
+                    <input name="password" type="password" placeholder="密码" class="mui-input-password">
+                    <span class="mui-icon mui-icon-eye"></span>
+                </div>
+                <div class="mui-input-row">
+                    <input type="password" placeholder="确认密码" class="mui-input-password">
+                    <span class="mui-icon mui-icon-eye"></span>
+                </div>
+                <div class="mui-input-row">
+                    <input name="vCode" type="text" placeholder="认证码">
+                    <a href="javascript:;" class="btn_getCode mui-btn mui-btn-primary" >获取认证码</a>
+                </div>
+                <button href="index.html" class="mui-btn mui-btn-primary btn_login">注册</button>
+                <div class="mui-input-row cz_text">
+                    <input type="checkbox" checked/> 我同意《会员服务协议》
+                    <a href="login.html">立即登录</a>
+                </div>
             </div>
-            <div class="mui-input-row">
-                <input name="pass" type="password" placeholder="密码" class="mui-input-password">
-                <span class="mui-icon mui-icon-eye"></span>
-            </div>
-            <div class="mui-input-row">
-                <input name="rePass" type="password" placeholder="确认密码" class="mui-input-password">
-                <span class="mui-icon mui-icon-eye"></span>
-            </div>
-            <div class="mui-input-row">
-                <input name="code" type="text" placeholder="认证码">
-                <a href="javascript:;" class="btn_getCode mui-btn mui-btn-primary" >获取认证码</a>
-            </div>
-            <a href="index.html" class="mui-btn mui-btn-primary btn_login">注册</a>
-            <div class="mui-input-row cz_text">
-                <input type="checkbox" checked/> 我同意《会员服务协议》
-                <a href="login.html">立即登录</a>
-            </div>
-        </div>
+       </form>
     </div>
     <footer class="cz_tabs">
         <a class="tab_home fa fa-home" href="../index.html"><span>首页</span></a>
@@ -51,5 +56,65 @@
     </footer>
 </div>
 <script src="../res/mui/js/mui.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script>
+    // 一一一一
+    // 1 用户通过表单输入信息
+    // 2 获取用户的输入信息
+    // 3 将获取到的信息发送到服务器
+    // 4 等到响应结果
+
+    // 二二二二 获取验证码
+    // 1  将手机号发送到服务器
+    // 2 用户通过手机号获得验证码
+    // 3 用户将得到的验证码输入到表单里面
+    // 4 将验证码发送到服务器， 在由服务器验证是否正确
+
+    $('.btn_getCode ').on('click', function () {
+        // 1 将手机号发送到服务器
+        var mobile = $('.mobile').val();
+        // 判断手机号是否为空
+        if (mobile == '') alert('手机号不能为空');
+
+        // 2 用户通过手机号获得验证码
+        $.ajax({
+            url:'/api/user/vCode',
+            type:'get',
+            // 后端假装发送验证码,所有不需要手机
+            data: {
+                mobile:mobile
+            },
+            success: function (info) {
+                console.log(info);                
+            }
+        });
+    });
+
+
+
+    $('form').on('submit', function () {
+        // 1 用户通过表单输入信息
+        // 2 获取用户的输入信息
+        var data = $(this).serialize();
+
+        // 3 将获取到的信息发送到服务器
+        $.ajax({
+            url:'/api/user/register',
+            type:'post',
+            data: data,
+            success : function (info) {
+                console.log(info);
+                // 二二二 3 如果success为true的话， 在跳转到登录页面
+                if (info.success) {
+                    location.href = './login.html';
+                }
+            }
+        });
+        // 阻止表单默认提交，使用ajax
+        return false;
+    });
+
+
+</script>
 </body>
 </html>
