--- a/m/user/password.html
+++ b/m/user/password.html
@@ -20,21 +20,23 @@
         <span class="title">修改密码</span>
     </header>
     <div class="cz_container">
-        <div class="form_box">
-            <div class="mui-input-row">
-                <input name="pass" type="password" placeholder="密码" class="mui-input-password">
-                <span class="mui-icon mui-icon-eye"></span>
+        <form action="">
+            <div class="form_box">
+                <div class="mui-input-row">
+                    <input name="oldPassword" type="password" placeholder="旧密码" class="mui-input-password">
+                    <span class="mui-icon mui-icon-eye"></span>
+                </div>
+                <div class="mui-input-row">
+                    <input name="newPassword" type="password" placeholder="新密码" class="mui-input-password">
+                    <span class="mui-icon mui-icon-eye"></span>
+                </div>
+                <div class="mui-input-row">
+                    <input name="vCode" type="text" placeholder="认证码">
+                    <a href="javascript:;" class="btn_getCode mui-btn mui-btn-primary" >获取认证码</a>
+                </div>
+                <button type="submit" class="mui-btn mui-btn-primary btn_login">确认修改</button>
             </div>
-            <div class="mui-input-row">
-                <input name="rePass" type="password" placeholder="确认密码" class="mui-input-password">
-                <span class="mui-icon mui-icon-eye"></span>
-            </div>
-            <div class="mui-input-row">
-                <input name="code" type="text" placeholder="认证码">
-                <a href="javascript:;" class="btn_getCode mui-btn mui-btn-primary" >获取认证码</a>
-            </div>
-            <a href="index.html" class="mui-btn mui-btn-primary btn_login">确认修改</a>
-        </div>
+        </form>
     </div>
     <footer class="cz_tabs">
         <a class="tab_home fa fa-home" href="../index.html"><span>首页</span></a>
@@ -44,5 +46,44 @@
     </footer>
 </div>
 <script src="../res/mui/js/mui.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script>
+    // 修改当前用户的密码
+    $('.btn_getCode').on('click', function () {
+        // 1 点击按钮时，发送请求
+        $.ajax({
+            url: '/api/user/vCodeForUpdatePassword',
+            type: 'get',
+            success : function (info) {
+                console.log(info);
+            }
+        });
+    });
+
+    // 获取验证码之后
+    // 1 获取客户填写的信息
+    // 2 发送数据到服务器
+    // 3 等待响应结果
+    $('form').on('submit', function () {
+         // 1 获取客户填写的信息
+         var data = $(this).serialize();
+         // 2 发送数据到服务器
+         $.ajax({
+            url: '/api/user/updatePassword',
+            type:'post',
+            data: data,
+            success: function (info) {
+                console.log(info);
+                if (info.success) {
+                    location.href = './login.html';
+                }
+            }
+         });
+         // 阻止表单的默认提交
+         return false;
+    });
+    
+
+</script>
 </body>
 </html>
