--- a/category.html
+++ b/category.html
@@ -111,41 +111,11 @@
                                 <th width="10%">序号</th>
                                 <th>分类名称</th>
                                 <th>是否显示</th>
-                                <td>品牌数量</td>
                                 <th>操作</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>前端开发</td>
-                                <td>是</td>
-                                <td>8</td>
-                                <td>
-                                    <a href="javascript:;" class="btn btn-info btn-xs">编 辑</a>
-                                    <a href="javascript:;" class="btn btn-warning btn-xs">注 销</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>前端开发</td>
-                                <td>是</td>
-                                <td>8</td>
-                                <td>
-                                    <a href="javascript:;" class="btn btn-info btn-xs">编 辑</a>
-                                    <a href="javascript:;" class="btn btn-warning btn-xs">注 销</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>前端开发</td>
-                                <td>是</td>
-                                <td>8</td>
-                                <td>
-                                    <a href="javascript:;" class="btn btn-info btn-xs">编 辑</a>
-                                    <a href="javascript:;" class="btn btn-warning btn-xs">注 销</a>
-                                </td>
-                            </tr>
+                                                    
                         </tbody>
                     </table>
                 </div>
@@ -153,9 +123,47 @@
         </div>
     </div>
 
+    <script type="text/html" id="tpl">
+        {{each rows as val key}}
+        <tr>
+            <td>{{key + 1}}</td>
+            <td>{{val.categoryName}}</td>
+            {{if(val.isDelete == 1)}}
+            <td>是</td>
+            {{else}}
+            <td>否</td>
+            {{/if}}
+            <td>
+                <a href="javascript:;" class="btn btn-info btn-xs">编 辑</a>
+                <a href="javascript:;" class="btn btn-warning btn-xs">注 销</a>
+            </td>
+        </tr>
+        {{/each}}
+    </script>
     <script src="./assets/jquery/jquery.min.js"></script>
     <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="./assets/nprogress/nprogress.js"></script>
+    <script src="./assets/art-template/template-web.js"></script>
     <script src="./js/common.js"></script>
+
+    <script>
+        $.ajax({
+            url: '/api/category/queryTopCategoryPaging',
+            type: 'get',
+            data: {
+                page: 1,
+                pageSize: 10
+            },
+            success: function(info) {
+                console.log(info);
+
+                // 调用模板引擎
+                var html = template('tpl',info);
+                // 添加DOM
+                $('tbody').html(html);
+            }
+        });
+
+    </script>
 </body>
 </html>
