--- a/goods_add.html
+++ b/goods_add.html
@@ -107,10 +107,11 @@
                                 <div class="cover">
                                     <i class="fa fa-upload"></i>                  
                                 </div>
+                                <input type="hidden" class="thumb">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">商品名称</label>
+                            <label for="" name="proName" class="col-xs-3 control-label">商品名称</label>
                             <div class="col-xs-5">
                                 <input type="text" class="form-control input-sm">
                             </div>
@@ -118,40 +119,55 @@
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">所属品牌</label>
                             <div class="col-xs-5">
-                                <select name="" class="form-control input-sm">
-                                    <option value="">河北省</option>
-                                    <option value="">山东省</option>
-                                    <option value="">北京市</option>
+                                <select name="brandId" class="form-control input-sm">
+                                  
                                 </select>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">商品价格</label>
+                            <label for="" name="oldPrice" class="col-xs-3 control-label">商品价格</label>
                             <div class="col-xs-5">
                                 <input type="text" class="form-control input-sm">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">优惠价格</label>
+                            <label for="" name="price" class="col-xs-3 control-label">优惠价格</label>
+                            <div class="col-xs-5">
+                                <input type="text" class="form-control input-sm">
+                            </div>
+                        </div>
+                         <div class="form-group">
+                            <label for="" name="size" class="col-xs-3 control-label">尺寸</label>
                             <div class="col-xs-5">
                                 <input type="text" class="form-control input-sm">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">库存量</label>
+                            <label for="" name="num" class="col-xs-3 control-label">库存量</label>
                             <div class="col-xs-5">
                                 <input type="text" class="form-control input-sm">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">商品描述</label>
+                            <label for="" class="col-xs-3 control-label">是否上下架</label>
+                            <div class="col-xs-5">
+                                <label class="radio-inline">
+                                    <input name="statu" value="1" type="radio" checked> 是
+                                </label>
+                                <label class="radio-inline">
+                                    <input name="statu" value="0" type="radio"> 否
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="" name="proDesc" class="col-xs-3 control-label">商品描述</label>
                             <div class="col-xs-5 ckeditor">
                                 <textarea name="" rows="5" class="form-control input-sm"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-8">
-                                <a href="javascript:;" class="btn btn-success btn-sm pull-right">保 存</a>
+                                <button type="submit" class="btn btn-success btn-sm pull-right">保 存</button>
                             </div>
                         </div>
                     </form>
@@ -159,10 +175,77 @@
             </div>
         </div>
     </div>
+    <script type="text/html" id="brand">
+        <option value="">请选择品牌</option>
+        {{ each rows as val }}
+        <option value="{{val.id}}">{{val.brandName}}</option>
+        {{ /each }}
 
+    </script>
     <script src="./assets/jquery/jquery.min.js"></script>
     <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="./assets/nprogress/nprogress.js"></script>
+    <script src="./js/jquery.form.min.js"></script>
+    <script src="./assets/art-template/template-web.js"></script>
     <script src="./js/common.js"></script>
+
+    <script>
+        // 1 上传商品品牌
+        $('#upfile').on('change', function () {
+            // a 获取图片的信息
+            var file = this.files[0];
+            // b 通过FormData 将图片处理成二进制
+            var data = new FormData();
+            data.append('pic1',file);
+
+            // c 实例化xhr
+            var xhr = new XMLHttpRequest();
+            xhr.open('post','/api/product/addProductPic');
+            xhr.send(data);
+            xhr.onload = function () {
+                console.log(xhr.responseText);
+                var info = JSON.parse(xhr.responseText);
+
+                // d 预览
+                $('.preview img').attr('src','/api' + info.picAddr);
+                // e 将图片路径保存
+                $('.thumb').val(info.picAddr);
+
+            }
+        });
+        // 2 取出品牌
+        $.ajax({
+            url: '/api/category/querySecondCategoryPaging',
+            type: 'get',
+            data: {
+                page: 1,
+                pageSize: 10
+            },
+            success: function (info) {
+                console.log(info);
+
+                // a 调用模板引擎
+                var html = template('brand', info);
+                // b 添加DOM
+                $('select').html(html);
+            }
+        });
+        // 3 提交表单
+        $('form').ajaxForm({
+            url: '/api/product/addProduct',
+            type: 'post',
+            beforeSubmit: function () {
+                // 将input type 为file的表单
+                $('#upfile').val('');
+            },
+            success: function (info) {
+                // console.log(info);
+                if (info.success) {
+                    location.href = './goods_list.html';
+                }
+            }
+        });
+
+    </script>
 </body>
 </html>
