--- a/m/product.html
+++ b/m/product.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="res/fontAwesome/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/common.css"/>
     <link rel="stylesheet" href="css/product.css"/>
+    <style>
+        .p_active {
+            background-color: pink;
+        }
+    </style>
 </head>
 <body>
 <div class="cz_layout">
@@ -20,7 +25,7 @@
         <span class="title">商品详情</span>
         <a href="index.html" class="icon_home fa fa-home"></a>
     </header>
-    <div class="cz_container ">
+    <div class="cz_container">
         <div class="mui-scroll-wrapper">
             <div class="mui-scroll" id="detail">
                
@@ -67,18 +72,16 @@
     </div>
     <div class="p_size">
         尺码：
-        <span class="btn_size">38</span>
-        <span class="btn_size">39</span>
-        <span class="btn_size">40</span>
-        <span class="btn_size">41</span>
-        <span class="btn_size">43</span>
-        <span class="btn_size">44</span>
-        <span class="btn_size">45</span>
+        {{each size as val}}
+        <span class="btn_size">{{val}}</span>
+        {{/each}}
     </div>
     <div class="p_number">
         数量：
-        <span class="jian">-</span><input type="tel"/><span class="jia">+</span>
-        剩余：0 件
+        <span class="jian btn_num">-</span>
+        <input class="input_num" type="tel" value="1" />
+        <span class="jia btn_num">+</span>
+        剩余：<span class="p_num">{{num}}</span> 件
     </div>
     <div class="p_detail">
         <img data-lazyload="images/detail.jpg"  alt=""/>
@@ -142,6 +145,11 @@
             // 4 对数据进行处理
             info.dis = (info.price / info.oldPrice * 10).toFixed(1);
 
+            // 将型号处理成数组
+            info.size = info.size.split('-');
+
+
+            // 调用模板引擎
             var html = template('tpl',info);
             $('#detail').html(html);
 
@@ -161,12 +169,36 @@
         }
     });
 
+    // 5 完成型号 数量对应的DOM交互
+    $('#detail').on('click','.btn_size', function () {
+        $(this).addClass('p_active').siblings().removeClass('p_active');
+    });
+
+    // 6 点击加减的时候。数量自增自减
+    $('#detail').on('click','.btn_num', function () {
+        // 数量表单
+        var input = $(this).siblings('input');
+        var n = input.val() - 0;
+       // 判断
+       if ($(this).is('.jia')) {
+            // console.log('加');
+            // 数量不能大于总库存
+            if (n >= $('.p_num').text()) return;
+            return input.val(++n);
+       }
+           // 数量不能小于1
+           if (n <= 1) return;
+           input.val(--n);
+    });
 
     // // 4 添加购物车
     $('.btn_addCart').on('click', function () {
         // 1 获取参数（DOM)
-        // 2 发送服务端
-        // 3 等待响应
+        var size = $('.p_active').text().trim();
+        var num = $('.input_num').val().trim() - 0;
+        //  验证
+        if(!size) return alert('必须选择一个型号');
+        if(num < 1 || num > $('.p_num').text()) return alert('请正确填写数量');
 
         // 可先模拟参数
         // 2 发送服务端
@@ -175,11 +207,11 @@
             type: 'post',
             data: {
                 // 产品参数
-                productId: '',
+                productId: o.pid,
                 // 产品名字
-                num: 1,
+                num: num,
                 // 产品大小
-                size: 30
+                size: size
             },
 
             // 3 等待响应结果
@@ -190,8 +222,9 @@
                 if (info.error) {
                     alert('请先登录');
                     // 登录跳转
-                    location.href = '/m/user/login.html?url='+location.href;
+                    return location.href = '/m/user/login.html?url='+location.href;
                 }
+                location.href = './cart.html';
             }
         });
     });
